--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div class="total">Total: R$ <span id="total">0.00</span></div>
     </div>
     <button onclick="carregarHistorico()">Ver Histórico</button>
+    <button onclick="enviarParaHistorico()">Enviar para o Histórico</button>
+
     <div id="historico"></div>
 </body>
 </html>
